<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.alejoaj.practica1_p1.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/Circulo"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/Cuadrado"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/Triangulo"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/Cubo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            >
            <RadioButton
                android:id="@+id/rCirculo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:onClick="onRadioButtonClicked"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/rCuadrado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/rTriangulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/rCubo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:onClick="onRadioButtonClicked"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lRadio"
                    android:visibility="visible">
                    <TextView
                        android:id="@+id/tRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor= "@color/black"
                        android:text="@string/Radio"
                        android:textSize = "25sp"
                        android:gravity="center"
                        />
                    <EditText
                        android:id="@+id/eRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/inserte"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lLado1"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/tLado1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor= "@color/black"
                        android:text="@string/Lado1"
                        android:textSize = "25sp"
                        android:gravity="center"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/eLado1"
                        android:hint="@string/inserte"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lLado2"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/tLado2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor= "@color/black"
                        android:text="@string/Lado2"
                        android:textSize = "25sp"
                        android:gravity="center"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/eLado2"
                        android:hint="@string/inserte"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lAltura"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/tAltura"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor= "@color/black"
                        android:text="@string/Altura"
                        android:textSize = "25sp"
                        android:gravity="center"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/eAltura"
                        android:hint="@string/inserte"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lBase"
                    android:visibility="gone"
                    >
                    <TextView
                        android:id="@+id/tBase"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor= "@color/black"
                        android:text="@string/Base"
                        android:textSize = "25sp"
                        android:gravity="center"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/eBase"
                        android:hint="@string/inserte"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lAltocubo"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/tAltocubo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor= "@color/black"
                        android:text="@string/Alto"
                        android:textSize = "24sp"
                        android:gravity="center"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/eAltocubo"
                        android:hint="@string/inserte"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lBasecubo"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/tBasecubo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor= "@color/black"
                        android:text="@string/Base"
                        android:textSize = "25sp"
                        android:gravity="center"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/eBasecubo"
                        android:hint="@string/inserte"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lAncho"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/tAncho"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor= "@color/black"
                        android:text="@string/Ancho"
                        android:textSize = "25sp"
                        android:gravity="center"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/eAncho"
                        android:hint="@string/inserte"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/bCalcular"
                        android:textColor="@color/white"
                        android:background="@color/red"
                        android:text="@string/Calcular"
                        android:onClick="CbCaclular"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="30">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:id="@+id/Resultado" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="50"
                    android:visibility="visible"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/img"
                        android:src="@drawable/circulo"
                        android:visibility="visible"
                        android:layout_margin="10dp"
                        />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
